fix(date): z-index and border

--- a/projects/quang/components/date/date.component.scss
+++ b/projects/quang/components/date/date.component.scss
@@ -2,6 +2,7 @@
 
 ::ng-deep {
   .air-datepicker {
+    z-index: 99999;
     .air-datepicker--pointer {
       display: none;
     }
@@ -16,9 +17,12 @@
   }
 
   input {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
     flex: 1;
+
+    .with-button-calendar {
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+    }
   }
 
   .btn-outline-calendar {
